@@ -129,10 +129,10 @@ Disassembly of section \.text:
    120000290:	df9980a8 	ld	t9,-32600\(gp\)
    120000294:	df998050 	ld	t9,-32688\(gp\)
    120000298:	df9980a8 	ld	t9,-32600\(gp\)
-   12000029c:	0320f809 	jalr	t9
+   12000029c:	0411ff90 	bal	1200000e0 <fn>
    1200002a0:	00000000 	nop
    1200002a4:	df998050 	ld	t9,-32688\(gp\)
-   1200002a8:	0320f809 	jalr	t9
+   1200002a8:	0411ff8d 	bal	1200000e0 <fn>
    1200002ac:	00000000 	nop
    1200002b0:	df8580c0 	ld	a1,-32576\(gp\)
    1200002b4:	df8580c0 	ld	a1,-32576\(gp\)
@@ -245,10 +245,10 @@ Disassembly of section \.text:
    120000460:	df9980b0 	ld	t9,-32592\(gp\)
    120000464:	df998080 	ld	t9,-32640\(gp\)
    120000468:	df9980b0 	ld	t9,-32592\(gp\)
-   12000046c:	0320f809 	jalr	t9
+   12000046c:	0411001d 	bal	1200004e4 <fn2>
    120000470:	00000000 	nop
    120000474:	df998080 	ld	t9,-32640\(gp\)
-   120000478:	0320f809 	jalr	t9
+   120000478:	0411001a 	bal	1200004e4 <fn2>
    12000047c:	00000000 	nop
    120000480:	1000ff17 	b	1200000e0 <fn>
    120000484:	df8580b8 	ld	a1,-32584\(gp\)
