@@ -185,11 +185,11 @@ Disassembly of section \.text:
    120000370:	3c190000 	lui	t9,0x0
    120000374:	033cc82d 	daddu	t9,t9,gp
    120000378:	df398048 	ld	t9,-32696\(t9\)
-   12000037c:	0320f809 	jalr	t9
+   12000037c:	0411ff58 	bal	1200000e0 <fn>
    120000380:	00000000 	nop
    120000384:	df998030 	ld	t9,-32720\(gp\)
    120000388:	673900e0 	daddiu	t9,t9,224
-   12000038c:	0320f809 	jalr	t9
+   12000038c:	0411ff54 	bal	1200000e0 <fn>
    120000390:	00000000 	nop
    120000394:	3c050000 	lui	a1,0x0
    120000398:	00bc282d 	daddu	a1,a1,gp
@@ -358,11 +358,11 @@ Disassembly of section \.text:
    120000624:	3c190000 	lui	t9,0x0
    120000628:	033cc82d 	daddu	t9,t9,gp
    12000062c:	df398050 	ld	t9,-32688\(t9\)
-   120000630:	0320f809 	jalr	t9
+   120000630:	0411002b 	bal	1200006e0 <fn2>
    120000634:	00000000 	nop
    120000638:	df998030 	ld	t9,-32720\(gp\)
    12000063c:	673906e0 	daddiu	t9,t9,1760
-   120000640:	0320f809 	jalr	t9
+   120000640:	04110027 	bal	1200006e0 <fn2>
    120000644:	00000000 	nop
    120000648:	3c050000 	lui	a1,0x0
    12000064c:	00bc282d 	daddu	a1,a1,gp
